--- a/static/sass/nav.sass
+++ b/static/sass/nav.sass
@@ -16,7 +16,7 @@ $iconSize: 30px
   display: -ms-flexbox
   text-align: center
   font-size: 0
-  position: absolute
+  position: fixed
   bottom: 0
   left: 0
 
